[gd_scene load_steps=8 format=3 uid="uid://bcq72stfb7t3v"]

[ext_resource type="Script" uid="uid://c6glqo4vedi3s" path="res://level/trinket/trinket.gd" id="1_25hem"]
[ext_resource type="PackedScene" uid="uid://bmcm1r7wkqc2k" path="res://level/trinket/trinkets.glb" id="2_2j0c3"]
[ext_resource type="Material" uid="uid://ln2l5comkdpa" path="res://level/trinket/mat_trinket.tres" id="3_2j0c3"]
[ext_resource type="Texture2D" uid="uid://daaio1w4lqb6w" path="res://shared/mouse_left_outline.png" id="4_sq006"]
[ext_resource type="AudioStream" uid="uid://ca8kktckhcbry" path="res://sfx/pickup.wav" id="5_q43g2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sq006"]
size = Vector3(0.1, 0.3, 0.3)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sq006"]
height = 1.0810547
radius = 1.8

[node name="trinket" type="Node3D"]
script = ExtResource("1_25hem")

[node name="rigid" type="RigidBody3D" parent="."]
collision_layer = 0
collision_mask = 0
freeze = true

[node name="rigid_col" type="CollisionShape3D" parent="rigid"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -2.401137e-10, -0.0067029744, 0)
shape = SubResource("BoxShape3D_sq006")

[node name="trinkets" parent="rigid" instance=ExtResource("2_2j0c3")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.03429684, 0)

[node name="washer" parent="rigid/trinkets" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0702474, 0)
visible = false
surface_material_override/0 = ExtResource("3_2j0c3")

[node name="coin" parent="rigid/trinkets" index="1"]
visible = false
surface_material_override/0 = ExtResource("3_2j0c3")

[node name="key" parent="rigid/trinkets" index="2"]
visible = false

[node name="bottlecap" parent="rigid/trinkets" index="3"]
visible = false

[node name="ring" parent="rigid/trinkets" index="4"]
visible = false

[node name="knife" parent="rigid/trinkets" index="5"]
visible = false

[node name="Marker3D" type="Marker3D" parent="rigid"]
visible = false

[node name="pickup_area" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="pickup_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45947266, 0)
shape = SubResource("CylinderShape3D_sq006")

[node name="icon" type="Sprite3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 1.2413704, 0)
visible = false
billboard = 1
texture_filter = 0
texture = ExtResource("4_sq006")

[node name="sfx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_q43g2")
volume_db = -21.0

[connection signal="body_entered" from="pickup_area" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_exited" from="pickup_area" to="." method="_on_pickup_area_body_exited"]

[editable path="rigid/trinkets"]
